# p2panda-explorer

./: Cargo.toml  README.md
p2panda-play/: Cargo.toml
p2panda-play/src/: main.rs
p2panda-sdk/: Cargo.toml  build.rs
p2panda-sdk/src/: lib.rs
p2panda-sdk/src/p2panda/: client.rs  graphql.rs  mod.rs
schemas/: p2panda.graphql
