[package]
name = "play-p2panda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["p2panda-*"]

[workspace.dependencies]
aquadoggo = "0.5.0"
p2panda-rs = "0.7.1"

tokio = "1"
anyhow = "1"

cynic = "3"
reqwest = "0.11"

serde = "1"
serde_json = "1"
# mime_guess = "2.0.4"

[wokspace.build-dependencies]
cynic-codegen = "3"
