[package]
name = "p2panda-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aquadoggo.workspace = true
p2panda-rs.workspace = true
tokio = {workspace = true,features = ["full"]}
serde_json.workspace = true
anyhow.workspace = true

p2panda-sdk = {path = "../p2panda-sdk"}